WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153846
Report blocked and cannotShowURL errors when using NetworkSession
https://bugs.webkit.org/show_bug.cgi?id=153846
Summary
Report blocked and cannotShowURL errors when using NetworkSession
Alex Christensen
Reported
2016-02-03 16:12:16 PST
Report blocked and cannotShowURL errors when using NetworkSession
Attachments
Patch
(12.07 KB, patch)
2016-02-03 16:20 PST
,
Alex Christensen
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2016-02-03 16:20:21 PST
Created
attachment 270607
[details]
Patch
Alex Christensen
Comment 2
2016-02-03 17:39:52 PST
http://trac.webkit.org/changeset/196101
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug