Report wasBlocked and cannotShowURL errors when using NetworkSession https://bugs.webkit.org/show_bug.cgi?id=153846

Reviewed by Antti Koivisto.

Source/WebCore:

No new tests, but this fixes http/tests/xmlhttprequest/redirect-cross-origin-2.html
when using NetworkSession.

* platform/URL.h:
WEBCORE_EXPORT because we are using portAllowed in WebKit2 now.

Source/WebKit2:

* NetworkProcess/NetworkLoad.cpp:
(WebKit::NetworkLoad::NetworkLoad):
(WebKit::NetworkLoad::didSendData):
(WebKit::NetworkLoad::wasBlocked):
(WebKit::NetworkLoad::cannotShowURL):
(WebKit::NetworkLoad::didReceiveResponseAsync):
* NetworkProcess/NetworkLoad.h:
NetworkDataTask is now RefCounted so we can protect it when reporting errors which delete the NetworkLoad.
* NetworkProcess/NetworkSession.h:
(WebKit::NetworkSessionTaskClient::~NetworkSessionTaskClient):
(WebKit::NetworkDataTask::create):
* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(WebKit::NetworkSession::takeDownloadID):
(WebKit::NetworkDataTask::NetworkDataTask):
Check the validity of the requested url and check if the port is allowed like we do in the ResourceHandle constructor.
(WebKit::NetworkDataTask::~NetworkDataTask):
Don't remove the task from the NetworkSession's map if we didn't make it because there was an error.
(WebKit::NetworkDataTask::scheduleFailure):
(WebKit::NetworkDataTask::failureTimerFired):
Implemented like ResourceHandle's.
(WebKit::NetworkDataTask::tryPasswordBasedAuthentication):
(WebKit::NetworkDataTask::resume):
(WebKit::NetworkDataTask::suspend):
Handle the failure timer like we do in ResourceHandle::setDefersLoading.



Canonical link: https://commits.webkit.org/171951@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196101 268f45cc-cd09-0410-ab3c-d52691b4dbfc