Source/WebCore/platform/URL.h
@@ -248,7 +248,7 @@ WEBCORE_EXPORT bool protocolIsInHTTPFamily(const String& url);
 
 unsigned short defaultPortForProtocol(const String& protocol);
 bool isDefaultPortForProtocol(unsigned short port, const String& protocol);
-bool portAllowed(const URL&); // Blacklist ports that should never be used for Web resources.
+WEBCORE_EXPORT bool portAllowed(const URL&); // Blacklist ports that should never be used for Web resources.
 
 bool isValidProtocol(const String&);
 
