Source/WebKit2/NetworkProcess/NetworkSession.h
@@ -37,6 +37,7 @@ OBJC_CLASS WKNetworkSessionDelegate;
 #include <WebCore/FrameLoaderTypes.h>
 #include <WebCore/ResourceHandleTypes.h>
 #include <WebCore/SessionID.h>
+#include <WebCore/Timer.h>
 #include <wtf/HashMap.h>
 #include <wtf/Ref.h>
 #include <wtf/RefCounted.h>
@@ -78,15 +79,20 @@ public:
     virtual void didCompleteWithError(const WebCore::ResourceError&) = 0;
     virtual void didBecomeDownload() = 0;
     virtual void didSendData(uint64_t totalBytesSent, uint64_t totalBytesExpectedToSend) = 0;
+    virtual void wasBlocked() = 0;
+    virtual void cannotShowURL() = 0;
 
     virtual ~NetworkSessionTaskClient() { }
 };
 
-class NetworkDataTask {
+class NetworkDataTask : public RefCounted<NetworkDataTask> {
     friend class NetworkSession;
 public:
-    explicit NetworkDataTask(NetworkSession&, NetworkSessionTaskClient&, const WebCore::ResourceRequest&, WebCore::StoredCredentials);
-
+    static Ref<NetworkDataTask> create(NetworkSession& session, NetworkSessionTaskClient& client, const WebCore::ResourceRequest& request, WebCore::StoredCredentials storedCredentials)
+    {
+        return adoptRef(*new NetworkDataTask(session, client, request, storedCredentials));
+    }
+    
     void suspend();
     void cancel();
     void resume();
@@ -114,6 +120,18 @@ public:
     bool tryPasswordBasedAuthentication(const WebCore::AuthenticationChallenge&, ChallengeCompletionHandler);
     
 private:
+    NetworkDataTask(NetworkSession&, NetworkSessionTaskClient&, const WebCore::ResourceRequest&, WebCore::StoredCredentials);
+
+    enum FailureType {
+        NoFailure,
+        BlockedFailure,
+        InvalidURLFailure
+    };
+    FailureType m_scheduledFailureType { NoFailure };
+    WebCore::Timer m_failureTimer;
+    void failureTimerFired();
+    void scheduleFailure(FailureType);
+    
     NetworkSession& m_session;
     NetworkSessionTaskClient& m_client;
     PendingDownload* m_pendingDownload { nullptr };
