Source/WebKit2/NetworkProcess/cocoa/NetworkSessionCocoa.mm
@@ -45,6 +45,7 @@
 #import <WebCore/ResourceRequest.h>
 #import <WebCore/ResourceResponse.h>
 #import <WebCore/SharedBuffer.h>
+#import <WebCore/URL.h>
 #import <wtf/MainThread.h>
 #import <wtf/NeverDestroyed.h>
 
@@ -274,11 +275,22 @@ DownloadID NetworkSession::takeDownloadID(NetworkDataTask::TaskIdentifier taskId
 }
 
 NetworkDataTask::NetworkDataTask(NetworkSession& session, NetworkSessionTaskClient& client, const WebCore::ResourceRequest& requestWithCredentials, WebCore::StoredCredentials storedCredentials)
-    : m_session(session)
+    : m_failureTimer(*this, &NetworkDataTask::failureTimerFired)
+    , m_session(session)
     , m_client(client)
 {
     ASSERT(isMainThread());
 
+    if (!requestWithCredentials.url().isValid()) {
+        scheduleFailure(InvalidURLFailure);
+        return;
+    }
+    
+    if (!portAllowed(requestWithCredentials.url())) {
+        scheduleFailure(BlockedFailure);
+        return;
+    }
+    
     auto request = requestWithCredentials;
     m_user = request.url().user();
     m_password = request.url().pass();
@@ -295,10 +307,39 @@ NetworkDataTask::NetworkDataTask(NetworkSession& session, NetworkSessionTaskClie
 
 NetworkDataTask::~NetworkDataTask()
 {
-    ASSERT(m_session.m_dataTaskMap.contains(taskIdentifier()));
-    ASSERT(m_session.m_dataTaskMap.get(taskIdentifier()) == this);
-    ASSERT(isMainThread());
-    m_session.m_dataTaskMap.remove(taskIdentifier());
+    if (m_task) {
+        ASSERT(m_session.m_dataTaskMap.contains(taskIdentifier()));
+        ASSERT(m_session.m_dataTaskMap.get(taskIdentifier()) == this);
+        ASSERT(isMainThread());
+        m_session.m_dataTaskMap.remove(taskIdentifier());
+    }
+}
+
+void NetworkDataTask::scheduleFailure(FailureType type)
+{
+    ASSERT(type != NoFailure);
+    m_scheduledFailureType = type;
+    m_failureTimer.startOneShot(0);
+}
+
+void NetworkDataTask::failureTimerFired()
+{
+    RefPtr<NetworkDataTask> protect(this);
+
+    switch (m_scheduledFailureType) {
+    case BlockedFailure:
+        m_scheduledFailureType = NoFailure;
+        client().wasBlocked();
+        return;
+    case InvalidURLFailure:
+        m_scheduledFailureType = NoFailure;
+        client().cannotShowURL();
+        return;
+    case NoFailure:
+        ASSERT_NOT_REACHED();
+        break;
+    }
+    ASSERT_NOT_REACHED();
 }
 
 bool NetworkDataTask::tryPasswordBasedAuthentication(const WebCore::AuthenticationChallenge& challenge, ChallengeCompletionHandler completionHandler)
@@ -328,11 +369,15 @@ void NetworkDataTask::cancel()
 
 void NetworkDataTask::resume()
 {
+    if (m_scheduledFailureType != NoFailure)
+        m_failureTimer.startOneShot(0);
     [m_task resume];
 }
 
 void NetworkDataTask::suspend()
 {
+    if (m_failureTimer.isActive())
+        m_failureTimer.stop();
     [m_task suspend];
 }
     
